[gd_scene load_steps=4 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://Tweet.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0431373, 0.0235294, 0.0235294, 0.556863 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 359.18 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 639.889 ]
}

[node name="TweetContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tweet" parent="TweetContainer" instance=ExtResource( 2 )]
margin_left = 230.0
margin_top = 65.0
margin_right = 1059.0
margin_bottom = 565.0

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_right = -853.334
margin_bottom = 31.0
rect_scale = Vector2( 3, 3 )
text = "NOT CONNECTED"
align = 1
valign = 1

[node name="Control" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -135.0
rect_min_size = Vector2( 1280, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.542
margin_top = -3.5
margin_right = -33.5421
margin_bottom = 26.5
rect_min_size = Vector2( 0, 30 )
rect_scale = Vector2( 2.2, 2.2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="LeftMargin" type="MarginContainer" parent="Control/HBoxContainer"]
margin_right = 10.0
margin_bottom = 30.0
rect_min_size = Vector2( 10, 0 )

[node name="PingBtn" type="Button" parent="Control/HBoxContainer"]
margin_left = 14.0
margin_right = 53.0
margin_bottom = 30.0
text = "Ping"

[node name="CenterMargin" type="MarginContainer" parent="Control/HBoxContainer"]
margin_left = 57.0
margin_right = 67.0
margin_bottom = 30.0
rect_min_size = Vector2( 10, 0 )

[node name="NextBtn" type="Button" parent="Control/HBoxContainer"]
margin_left = 71.0
margin_right = 140.0
margin_bottom = 30.0
text = "Get Next"

[node name="CenterMargin2" type="MarginContainer" parent="Control/HBoxContainer"]
margin_left = 144.0
margin_right = 154.0
margin_bottom = 30.0
rect_min_size = Vector2( 10, 0 )

[node name="Insert" type="Button" parent="Control/HBoxContainer"]
margin_left = 158.0
margin_right = 208.0
margin_bottom = 30.0
text = "Insert"

[node name="CenterMargin3" type="MarginContainer" parent="Control/HBoxContainer"]
margin_left = 212.0
margin_right = 222.0
margin_bottom = 30.0
rect_min_size = Vector2( 10, 0 )

[node name="Skip" type="Button" parent="Control/HBoxContainer"]
margin_left = 226.0
margin_right = 264.0
margin_bottom = 30.0
text = "Skip"

[node name="CenterMargin4" type="MarginContainer" parent="Control/HBoxContainer"]
margin_left = 268.0
margin_right = 278.0
margin_bottom = 30.0
rect_min_size = Vector2( 10, 0 )

[node name="PAttern" type="Button" parent="Control/HBoxContainer"]
margin_left = 282.0
margin_right = 340.0
margin_bottom = 30.0
text = "Pattern"

[node name="ResponseLabel" type="Label" parent="Control"]
margin_left = 10.6697
margin_top = 13.0
margin_right = 430.67
margin_bottom = 27.0
rect_scale = Vector2( 3, 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control2"]
margin_left = 214.335
margin_top = 158.362
margin_right = 501.335
margin_bottom = 294.362
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -0.444946
margin_top = -54.5641
margin_right = -0.444946
margin_bottom = 57.4359
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control2/Panel/VBoxContainer"]
margin_right = 287.0
margin_bottom = 14.0
text = "Insert "
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="Control2/Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 287.0
margin_bottom = 42.0
align = 1
placeholder_text = "name"

[node name="TextEdit" type="LineEdit" parent="Control2/Panel/VBoxContainer"]
margin_top = 46.0
margin_right = 287.0
margin_bottom = 70.0
align = 1
max_length = 128
placeholder_text = "text"

[node name="Label2" type="Label" parent="Control2/Panel/VBoxContainer"]
margin_top = 74.0
margin_right = 287.0
margin_bottom = 88.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control2/Panel/VBoxContainer"]
margin_top = 92.0
margin_right = 287.0
margin_bottom = 112.0
alignment = 1

[node name="inserConfirm" type="Button" parent="Control2/Panel/VBoxContainer/HBoxContainer"]
margin_left = 83.0
margin_right = 145.0
margin_bottom = 20.0
text = "Confirm"

[node name="InsertCancel" type="Button" parent="Control2/Panel/VBoxContainer/HBoxContainer"]
margin_left = 149.0
margin_right = 203.0
margin_bottom = 20.0
text = "Cancel"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Control/HBoxContainer/PingBtn" to="." method="_on_PingBtn_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/NextBtn" to="." method="_on_NextBtn_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Insert" to="." method="_on_Insert_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Skip" to="." method="_on_Skip_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/PAttern" to="." method="_on_PAttern_pressed"]
[connection signal="pressed" from="Control2/Panel/VBoxContainer/HBoxContainer/inserConfirm" to="." method="_on_inserConfirm_pressed"]
[connection signal="pressed" from="Control2/Panel/VBoxContainer/HBoxContainer/InsertCancel" to="." method="_on_InsertCancel_pressed"]
